[gd_scene load_steps=4 format=3 uid="uid://debbp5h345kq7"]

[ext_resource type="Script" path="res://Scripts/menu.gd" id="1_r1iq8"]
[ext_resource type="Texture2D" uid="uid://dr3ru60xxpcg4" path="res://Assets/Imagenes/MenuPrincipal/Menu Asteroides 1.jpg" id="2_tbhwb"]
[ext_resource type="PackedScene" uid="uid://bk2yfox4su8ig" path="res://Scenes/transition_control.tscn" id="3_fyxrp"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_r1iq8")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -305.0
offset_top = -6.0
offset_right = 2825.0
offset_bottom = 1756.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_tbhwb")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_direction = 1
layout_mode = 0
offset_left = 505.0
offset_top = 319.0
offset_right = 618.0
offset_bottom = 394.0
scale = Vector2(1.2, 1.2)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit
"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 346.0
offset_top = 186.0
offset_right = 766.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 0)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/line_spacing = 10
theme_override_constants/shadow_offset_x = -3
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 4
theme_override_constants/shadow_outline_size = 3
theme_override_font_sizes/font_size = 67
text = "Space Dementia"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TransitionControl" parent="." instance=ExtResource("3_fyxrp")]
layout_mode = 1
anchors_preset = -1
anchor_right = 28.8
anchor_bottom = 16.25
offset_bottom = 0.0

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
